--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,19 @@
 services:
   - type: web
     name: duesense-backend
-    runtime: python
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt --break-system-packages
+    env: python
+    region: oregon
+    buildCommand: |
+      # Force remove any cached Python
+      rm -rf /opt/render/project/python/Python-3.13.4 2>/dev/null || true
+      pip install --upgrade pip
+      pip install -r requirements.txt
     startCommand: uvicorn server:app --host 0.0.0.0 --port $PORT
     rootDir: backend
+    pythonVersion: "3.11.9"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.9
+        value: "3.11.9"
       - key: MONGODB_URI
         sync: false
 
