--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,9 @@ services:
     name: duesense-backend
     runtime: docker
     plan: free
-    dockerfilePath: ./backend/Dockerfile
-    dockerContext: ./backend
+    rootDir: backend
+    dockerfilePath: ./Dockerfile
+    dockerContext: .
     envVars:
       - key: PORT
         value: 10000
