Update Dockerfile for enhanced application setup and dependency management
- Replaced slim image with full Python 3.11.9-bullseye for better compatibility.
- Added system dependencies including OpenSSL and development tools.
- Implemented verification steps for OpenSSL and installed Python packages.
- Configured application to run with Uvicorn on port 10000.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,42 @@
+FROM python:3.11.9-bullseye
+
+WORKDIR /app
+
+# Install system dependencies
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    gcc \
+    g++ \
+    libssl-dev \
+    ca-certificates \
+    curl \
+    && rm -rf /var/lib/apt/lists/* && \
+    update-ca-certificates
+
+# Verify OpenSSL version (should be 1.1.1)
+RUN openssl version
+
+# Copy requirements
+COPY requirements.txt .
+
+# Upgrade pip and install dependencies
+RUN pip install --no-cache-dir --upgrade pip==26.0.1 && \
+    pip install --no-cache-dir -r requirements.txt
+
+# Verify certifi, pymongo, and motor installation
+RUN python -c "import certifi; print(f'Certifi: {certifi.where()}')" && \
+    python -c "import pymongo; print(f'PyMongo: {pymongo.__version__}')" && \
+    python -c "import motor; print(f'Motor: {motor.version}')"
+
+# Copy application code
+COPY . .
+
+# Expose port
+EXPOSE 10000
+
+# Run application
+CMD [\"uvicorn\", \"server:app\", \"--host\", \"0.0.0.0\", \"--port\", \"10000\", \"--log-level\", \"info\"]
+
 # Use Python 3.11.9 - GUARANTEED
 FROM python:3.11.9-slim
 
