--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,59 @@
-# Environment files
-.env
-.env.*
-.env.local
-
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+env/
+venv/
+ENV/
+.venv/
+pip-log.txt
 
-# Node
-node_modules/
-frontend/node_modules/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Environment
+.env
+.env.local
+.env.*.local
+*.key
+*.pem
 
-# Frontend build (exclude from version control, but NOT the backend/static copy)
-frontend/build/
-
-# IDE
-.idea/
+# IDEs
 .vscode/
+.idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Test files
-.coverage
-htmlcov/
-.pytest_cache/
+# Logs
+*.log
+logs/
 
-# Temporary files
+# Build artifacts
+dist/
+build/
+*.egg-info/
+
+# Frontend
+node_modules/
+frontend/build/
+frontend/.eslintcache
+
+# Temporary
 tmp/
 temp/
 *.tmp
+
+# Uploaded files (don't commit user data)
+/tmp/decks/
+
+# Database
+*.db
+*.sqlite
+
+# Test
+.coverage
+htmlcov/
+.pytest_cache/
