--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,10 +7,8 @@ uvicorn[standard]>=0.25.0,<0.31.0
 starlette>=0.35.0,<0.40.0
 python-multipart>=0.0.9,<0.1.0
 
-# ============ Database ============
-pymongo[srv]>=4.6.0,<4.12.0
-motor>=3.3.0,<3.8.0
-dnspython>=2.4.0,<2.9.0
+# ============ Database (Supabase) ============
+supabase>=2.3.0,<3.0.0
 
 # ============ Data Validation ============
 pydantic>=2.5.0,<2.13.0
@@ -32,7 +30,7 @@ Pillow>=10.2.0,<12.2.0
 # HuggingFace Inference API (open-source models)
 huggingface-hub>=0.20.0,<0.30.0
 
-# ============ SSL/TLS (Critical for MongoDB Atlas) ============
+# ============ SSL/TLS ============
 certifi>=2024.2.2
 
 # ============ Environment & Config ============
