--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "recharts": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "3.4.17",
+    "three": "^0.182.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
