feat: DueSense v2.0 — 16 new agents, Z.ai-only LLM, 9-dimension scoring
- Added 16 new service agents (funding, web_traffic, kruncher_insights,
  linkedin, founder_profiler, social_signals, glassdoor, competitive_landscape,
  market_sizing, gtm, milestone, email_parser, website_intelligence, etc.)
- Upgraded scorer from 6 to 9 dimensions (weights sum to 100)
- Upgraded orchestrator to 6-stage pipeline
- Upgraded EnrichlyrClient with 6 new API methods
- Fixed llm_provider.py: removed GROQ, Z.ai only (per CLAUDE.md spec)
- Added anthropic SDK for KruncherInsightsAgent
- Added schema_v2_additions.sql for database migration
- Updated render.yaml with all required env vars

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,8 @@ Pillow>=10.2.0,<12.2.0
 # ============ LLM Providers ============
 # HuggingFace Inference API (open-source models)
 huggingface-hub>=0.20.0,<0.30.0
+# Anthropic Claude (Kruncher Insights)
+anthropic>=0.25.0,<1.0.0
 
 # ============ SSL/TLS ============
 certifi>=2024.2.2
