--- a/render.yaml
+++ b/render.yaml
@@ -16,25 +16,32 @@ services:
         sync: false
       - key: SUPABASE_SERVICE_ROLE_KEY
         sync: false
-      # LLM Providers (at least one required)
+      # LLM Provider (Z.ai only — GROQ/HuggingFace banned)
       - key: Z_API_KEY
-        sync: false
-      - key: GROQ_API_KEY
-        sync: false
-      - key: HUGGINGFACE_API_KEY
         sync: false
       # API Authentication
       - key: DUESENSE_API_KEY
         sync: false
       - key: ENABLE_DEMO_KEY
         value: "false"
-      # Optional: Enrichment APIs
+      # Enrichment APIs
+      - key: ENRICHLYER_API_KEY
+        sync: false
       - key: GITHUB_TOKEN
         sync: false
       - key: NEWS_API_KEY
         sync: false
       - key: SERPAPI_KEY
         sync: false
+      - key: SCRAPER_API_KEY
+        sync: false
+      - key: FIRECRAWL_API_KEY
+        sync: false
+      - key: YOUTUBE_API_KEY
+        sync: false
+      # Configuration
+      - key: MAX_FILE_SIZE_MB
+        value: "50"
       # CORS (set to frontend URL)
       - key: ALLOWED_ORIGINS
         sync: false
