--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,10 +27,7 @@ lxml>=5.1.0,<6.1.0
 Pillow>=10.2.0,<12.2.0
 
 # ============ LLM Providers ============
-# HuggingFace Inference API (open-source models)
-huggingface-hub>=0.20.0,<0.30.0
-# Anthropic Claude (Kruncher Insights)
-anthropic>=0.25.0,<1.0.0
+# Z.ai is used via httpx (no additional SDK needed)
 
 # ============ SSL/TLS ============
 certifi>=2024.2.2
