fix: rename ENRICHLYER → ENRICHLAYER and remove email_parser_agent
- Rename ENRICHLYER_API_KEY → ENRICHLAYER_API_KEY across all files
- Rename api.enrichlyer.com → api.enrichlayer.com in clients.py
- Fix all enrichlyer/Enrichlyer string references to enrichlayer/Enrichlayer
- Delete email_parser_agent.py (uses unapproved GMAIL env vars)

--- a/render.yaml
+++ b/render.yaml
@@ -25,7 +25,7 @@ services:
       - key: ENABLE_DEMO_KEY
         value: "false"
       # Enrichment APIs
-      - key: ENRICHLYER_API_KEY
+      - key: ENRICHLAYER_API_KEY
         sync: false
       - key: GITHUB_TOKEN
         sync: false
